# voico

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-request-a-feature.yml  3-documentation-or-readme-problem.yml
.github/workflows/: autobot.yml  check-title.yml  check.yml  codeql.yml  dependabot-auto.yml  janitor.yml  notify-release.yml  pr-size.yml  publish.yml  smart-link.yml  stale.yml  welcome.yml
scripts/: check.bat  force-push.bat  install.bat  manage-git.bat
src/my-package/: main.py
src/voico/: __init__.py  backends.py  converter.py  main.py
src/voico/analysis/: __init__.py  formant.py  matcher.py  pitch.py  profile.py  spectral.py
src/voico/api/: _server.py  app.py
src/voico/core/: __init__.py  config.py  constants.py  errors.py  protocols.py  types.py
src/voico/dsp/: __init__.py  phase.py  shifter.py
src/voico/matching/: __init__.py  matcher.py
src/voico/quality/: __init__.py  diagnostic.py  gates.py  quality_score.py
src/voico/store/: profile_store.py
src/voico/stream/: __init__.py  streamer.py
src/voico/utils/: __init__.py  _internals.py  audio_io.py  decorators.py  math_utils.py
tests/: conftest.py  test_analysis.py  test_converter.py  test_core.py  test_dsp.py  test_main.py  test_utils.py
