[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-package"
version = "0.1.0"
description = "Example Package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ ]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.scripts]
run-my-package = "my_package:main"

[project.urls]
Homepage = "https://github.com/my-username/my-package"
Repository = "https://github.com/my-username/my-package"
Issues = "https://github.com/my-username/my-package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/my-package"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",
    "E402",
    "F401"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["E731"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- POE TASKS ---
[tool.poe.tasks]
# Quality Assurance
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
pre-commit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
strip-comments = { cmd = '''python -c "
import tokenize, io, pathlib
for p in pathlib.Path('.').rglob('*.py'):
    source = p.read_text()
    tokens = tokenize.generate_tokens(io.StringIO(source).readline)
    result = []
    for toktype, tokval, _, _, _ in tokens:
        if toktype != tokenize.COMMENT:
            result.append((toktype, tokval))
    try:
        cleaned = tokenize.untokenize(result)
        p.write_text(cleaned)
        print(f'Stripped: {p}')
    except Exception as e:
        print(f'Failed to process {p}: {e}')
"''' }
check = ["clean", "compile", "strip-comments", "pre-commit", "test", "clean"]

# Build Pipeline
build = { cmd = "python -m build" }

# Setup Task
hook = { cmd = "pre-commit install" }