[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voico"
version = "0.1.0"
description = "Modular Voice Converter"
readme = "README.md"
license = {text = "UCSL-1.0"}
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "librosa"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.scripts]
voico = "voico.main:main"

[project.urls]
Homepage = "https://github.com/YaronKoresh/voico"
Repository = "https://github.com/YaronKoresh/voico"
Issues = "https://github.com/YaronKoresh/voico/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voico"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF"]
ignore = [
    "E501",
    "E402"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["E731"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.poe.tasks]
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
pre-commit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
strip-comments = { cmd = '''python -c "
import tokenize
import io
import pathlib

def strip_comments_and_format(file_path):
    try:
        with open(file_path, 'r', encoding='utf-8', newline='') as f:
            source = f.read()

        tokens = tokenize.generate_tokens(io.StringIO(source).readline)
        result = []
        last_lineno = -1
        last_col = 0

        for toktype, tokval, start, end, line in tokens:
            if toktype == tokenize.COMMENT:
                continue

            if toktype == tokenize.NL or toktype == tokenize.NEWLINE:
                pass

            result.append((toktype, tokval, start, end, line))
        cleaned = tokenize.untokenize(result)

        with open(file_path, 'w', encoding='utf-8', newline='') as f:
            f.write(cleaned)

        print(f'Stripped and cleaned: {file_path}')

    except Exception as e:
        print(f'Failed to process {file_path}: {e}')

for p in pathlib.Path('.').rglob('*.py'):
    strip_comments_and_format(p)
"''' }
check = ["clean", "compile", "strip-comments", "pre-commit", "test", "clean"]

build = { cmd = "python -m build" }

hook = { cmd = "pre-commit install" }
